--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ owner:
     verify:
     ad-client:
     ad-slot:
+    scholar: #id
   bing-verify:
   github: #username
   stackoverflow: #123456/username from a "http://stackoverflow.com/users/123456/username" link
@@ -36,6 +37,8 @@ owner:
   weibo: #username
   flickr: #username
   codepen: #username
+  researchgate: #username
+  mendeley: #username
 
 #DO NOT EDIT BEYOND THIS POINT
 # Jekyll configuration
