adding comments to config

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@
 title:            Site Title
 locale:           en_US
 logo:
-url: http://ncsu-libraries.github.io/jekyll-academic/
+# If using a Github User page (i.e. username.github.io) to host your site, delete the default url that is below.
+url: http://ncsu-libraries.github.io/jekyll-academic
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Your Name
