move accents color options to config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,11 @@ owner:
   codepen: #username
   disqus-shortname:
 
+# The following adjust the accents for your site. If you would like to further edit colors, fonts, font sizes, etc.
+# you may do so in _sass/variables.scss
+highlight-color: '#CC0000'
+lowlight-color: '#000'
+
   # NOTE: If you would like your site to be licensed under a creative commons license, uncomment the 'yes' next to the type of license you wish to use.
 creative-commons:
   cc-by: #yes
