--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ logo: # filename of a logo image that has been placed into your images directory
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Caleb A. Aldridge
-  avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
-  email: #emailaddress
+  avatar: ALDRIDGE_MS_COOP_EXT.png
+  bio: "PhD Student and Graduate Research Assistant"
+  email: caa134@msstate.edu
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
