--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ owner:
 
 # The following adjust the accents for your site. If you would like to further edit colors, fonts, font sizes, etc.
 # you may do so in _sass/variables.scss
-highlight-color: '#61AE47'
-lowlight-color: '#976E47'
+highlight-color: '#196F3D'
+lowlight-color: '#935116'
 
   # NOTE: If you would like your site to be licensed under a creative commons license, uncomment the 'yes' next to the type of license you wish to use.
 creative-commons:
