--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@
 - title: Presentations
   url: /presentations/
 
-- title: Resume
-  url: /resume/
+- title: CV
+  url: /cv/
 
 - title: Blog
   url: /blog/
