--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: # filename of a logo image that has been placed into your images directory
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Caleb A. Aldridge
-  avatar: ALDRIDGE_MS_COOP_EXT.png
+  avatar: The Naturalist.jpg
   bio: "PhD Student and Graduate Research Assistant"
   email: caa134@msstate.edu
   # Do not include the @ symbol in your Twitter username
