--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 
 title: Caleb A. Aldridge
 locale: en_US
-logo: # filename of a logo image that has been placed into your images directory
-
+logo: sitelogo.jpg
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Caleb A. Aldridge
