--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
-_site/*
-.sass-cache/*
-.idea/*
+# Created by https://www.gitignore.io/api/jekyll,windows
+
+### Jekyll ###
+_site/
+.sass-cache/
+.jekyll-metadata
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+
+# End of https://www.gitignore.io/api/jekyll,window
