Changes to image paths

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: #none
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Caleb A. Aldridge
-  avatar: \images\profile-pics-logos\The Naturalist.jpg
+  avatar: aldridgecaleb.github.io/images/profile-pics-logos/The Naturalist.jpg
   bio: "PhD Student and Graduate Research Assistant"
   email: caa134@msstate.edu
   # Do not include the @ symbol in your Twitter username
