--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   youtube: #username
   soundcloud: #username
   weibo: #username
-  flickr: #username
+  flickr: caleb.a.aldridge
   codepen: #username
   disqus-shortname:
 
