updating to https

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ owner:
   facebook: #username
   instagram: #username
   bing-verify:
-  stackoverflow: #123456/username from a "http://stackoverflow.com/users/123456/username" link
+  stackoverflow: #123456/username from a "https://stackoverflow.com/users/123456/username" link
   xing: #username
   lastfm: #username
   tumblr: #username
