--- a/reveal.js/bower.json
+++ b/reveal.js/bower.json
@@ -1,19 +1,16 @@
 {
   "name": "reveal.js",
-  "version": "3.2.0",
+  "version": "3.9.2",
   "main": [
     "js/reveal.js",
     "css/reveal.css"
   ],
-  "homepage": "https://lab.hakim.se/reveal-js/",
+  "homepage": "http://revealjs.com",
   "license": "MIT",
   "description": "The HTML Presentation Framework",
   "authors": [
     "Hakim El Hattab <hakim.elhattab@gmail.com>"
   ],
-  "dependencies": {
-    "headjs": "~1.0.3"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/hakimel/reveal.js.git"
