--- a/reveal.js/package.json
+++ b/reveal.js/package.json
@@ -1,45 +1,44 @@
 {
   "name": "reveal.js",
-  "version": "3.2.0",
+  "version": "3.9.2",
   "description": "The HTML Presentation Framework",
-  "homepage": "https://lab.hakim.se/reveal-js",
+  "homepage": "http://revealjs.com",
   "subdomain": "revealjs",
   "main": "js/reveal.js",
   "scripts": {
     "test": "grunt test",
-    "start": "grunt serve"
+    "start": "grunt serve",
+    "build": "grunt"
   },
   "author": {
     "name": "Hakim El Hattab",
     "email": "hakim.elhattab@gmail.com",
-    "web": "https://hakim.se"
+    "web": "http://hakim.se"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/hakimel/reveal.js.git"
   },
   "engines": {
-    "node": "~4.1.1"
-  },
-  "dependencies": {
-    "express": "~4.13.3",
-    "grunt-cli": "^0.1.13",
-    "mustache": "~2.2.1",
-    "socket.io": "~1.3.7",
-    "underscore": "~1.8.3"
+    "node": ">=9.0.0"
   },
   "devDependencies": {
-    "grunt-contrib-qunit": "~0.7.0",
-    "grunt-contrib-jshint": "~0.11.3",
-    "grunt-contrib-cssmin": "~0.14.0",
-    "grunt-contrib-uglify": "~0.9.2",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "~1.1.0-beta",
-    "grunt-contrib-connect": "~0.11.2",
-    "grunt-autoprefixer": "~3.0.3",
+    "express": "^4.16.2",
+    "grunt": "^1.0.4",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-connect": "^2.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-qunit": "^3.1.0",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.0.2",
     "grunt-zip": "~0.17.1",
-    "grunt": "~0.4.5",
-    "node-sass": "~4.14.1"
+    "load-grunt-tasks": "^4.0.0",
+    "mustache": "^2.3.0",
+    "node-sass": "^4.13.1",
+    "socket.io": "^2.2.0"
   },
   "license": "MIT"
 }
